# openmm_fts

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  convert_h5_to_gsd.py  environment.yml  omm.py  omm_replica.py  pyproject.toml  run.py  run_fts.py  run_opes.py  run_replica.py  traj_writer.py
omm_fts/: __init__.py
omm_fts/io/: __init__.py  traj_writer.py
omm_fts/omm/: __init__.py  omm_fts.py  omm_replica.py
omm_fts/scripts/: analyze_fe.py  convert_h5_to_gsd.py  interpolate_string.py  run_fts.py  run_replica.py
omm_fts/utils/: __init__.py  natural_sort.py
walkthrough/: Walkthrough.ipynb  ala2_0_string.h5  ala2_free_energy.h5  ala2_interpolated_string.h5  replica_ranks.h5  swap_rates.h5
