# pyproject.toml
[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openmm_fts"
version = "0.1.0"
description = "Examples using the string method in collective variables on alanine dipeptide in OpenMM."
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Clay Batton", email = "cbatton35@example.com"}
]
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy",
    "scipy",
    "h5py",
    "numba",
    "mdtraj",
    "openmm",
    "openmm_csvr @ git+https://github.com/cbatton/openmm_csvr.git",
    "mpi4py",
]

[project.optional-dependencies]
conversion = [
    "gsd>=2.0.0",
]

[project.scripts]
omm-fts = "omm_fts.scripts.run_fts:main"
omm-replica = "omm_fts.scripts.run_replica:main"
omm-convert = "omm_fts.scripts.convert_h5_to_gsd:main"

[tool.setuptools]
packages = ["omm_fts"]

[tool.setuptools.package-dir]
omm_fts = "omm_fts"

[tool.ruff]
line-length = 88
preview = true

[tool.ruff.lint]
select = [
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "C90", # mccabe complexity
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "W",   # pycodestyle warnings
    "I",   # isort
    "N",   # pep8-naming
    "D",   # pydocstyle
]
ignore = [
    "D107", # Missing docstring in `__init__`
    "D203", # 1 blank line required before class docstring (conflicts with black)
    "D212", # Multi-line docstring summary should start at the first line
    "E501", # Line too long (handled by `line-length` and black)
]

[tool.ruff.lint.per-file-ignores]
"*/__init__.py" = ["F401"]

[tool.ruff.lint.pydocstyle]
convention = "google"
